# pixeltable-skill

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.cursor-plugin/: plugin.json
.plugin/: plugin.json
agents/: pixeltable-debugger.md  pixeltable-pipeline-architect.md  pixeltable-rag-builder.md
commands/: debug.md  rag.md  scaffold.md
hooks/: session_orientation.py  validate_antipatterns.py
integrations/: README.md
integrations/langchain/: README.md  pyproject.toml
integrations/langchain/langchain_pixeltable/: __init__.py  vectorstore.py
integrations/llamaindex/: README.md  pyproject.toml
integrations/llamaindex/llama_index/vector_stores/pixeltable/: __init__.py  base.py
plugins/pixeltable-skill-claude/.claude-plugin/: plugin.json
plugins/pixeltable-skill-claude/skills/pixeltable-skill/references/: anti-patterns.md  workflows.md
scripts/: validate_plugin.py
skills/pixeltable-skill/: API_REFERENCE.md  SKILL.md
skills/pixeltable-skill/reference/: core-api.md  ml-data-pipeline.md  providers.md  video-rag-agents.md  workflows.md
skills/pixeltable-skill/references/: agents-memory-mcp.md  anti-patterns.md  cli.md  core-api.md  interop.md  providers.md  video-rag-agents.md  workflows.md
