[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-index-vector-stores-pixeltable"
version = "0.1.0"
description = "LlamaIndex VectorStore integration for Pixeltable multimodal data infrastructure."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Pixeltable", email = "contact@pixeltable.com" },
]
keywords = ["llamaindex", "llama-index", "pixeltable", "vectorstore", "multimodal", "embeddings", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "llama-index-core>=0.11",
    "pixeltable>=0.2.28",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/pixeltable/pixeltable-skill"
Repository = "https://github.com/pixeltable/pixeltable-skill/tree/main/integrations/llamaindex"
Documentation = "https://docs.pixeltable.com/"
Issues = "https://github.com/pixeltable/pixeltable/issues"

[tool.setuptools.packages.find]
include = ["llama_index*"]
